platform/storage/minio/minio-helm.yaml
# Flux HelmRelease for MinIO
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    name: minio
    istio-injection: enabled
